# website

./: .env.production  .gitignore  .prettierrc  CLAUDE.md  LICENSE.md  README.md  heroascii.js  ideas.md  index.d.ts  next.config.js  next.config.mjs  package-lock.json  package.json  pyproject.toml  ruff.toml  tsconfig.json  tsconfig.next.json
code-samples/: Parse.ts
lib/blog/: index.ts  page.tsx  (+4 more)
posts/: arkio-pin-tool.md  ascii-rendering.md  bit-set-iteration.md  bit-sets-boolean-performance.md  bit-sets-fast-foreach.md  bit-sets.md  build-schema-language-with-infer.md  build-schema-language-with-infer.mdx  canvas-to-ascii.md  clipboard.md  encoding-declension.md  gradients.md  grid-engine-performance.md  icelandic-developer-survey-2024.md  icelandic-name-declension-trie.md  jsdoc-as-an-alternative-typescript-syntax.md  move-to-monorepo.md  move-to-monorepo.mdx  multi-cursor-code-editing-animated-introduction.mdx  multi-selection.mdx  non-null-assertions.md  planes.md  playground.md  reusing-objects.md  search-git-commits.md  searching-and-navigating-git-commits.md  sharing-work-internally.md  smoothing-motion.md  stabilizing-noisy-inputs.md  state-of-iceland-2024.md  structural-typing.md  test.md  test.mdx  three-plane-intersection.md  type-and-non-null-assertions.md  typescript-structural-typing.md  vector-networks.mdx  visuals-first.md  webgl-gradients.md
public/: robots.txt
scripts/: chart.py  generate-rss.ts  generate-sitemap.ts  trie.py
src/: components.tsx  constants.ts  mailing-list.ts  types.ts  watcher-server.ts  watcher.ts
watcher/: postWatcher.ts
(+635 files in other folders)
