[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["alexharri <alexharri2919@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.4"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
